# skeenode

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  e2e_test.go  e2e_verify.go  go.mod
.github/workflows/: ci.yml
k8s/: configmap.yaml  deployment-ai.yaml  deployment-dashboard.yaml  deployments-backend.yaml  hpa.yaml  pod-disruption-budget.yaml  secrets.yaml.example  services.yaml
skeenode-ai/: .env.example  Dockerfile  pyproject.toml  requirements.txt
skeenode-ai/src/: __init__.py  app.py  config.py  main.py  model_registry.py  pipeline.py  schemas.py
skeenode-ai/src/api/: __init__.py  health.py  predictions.py  training.py
skeenode-ai/src/cli/: __init__.py  train.py
skeenode-ai/src/data/: __init__.py  collector.py  training.py
skeenode-ai/src/middleware/: __init__.py  logging.py  rate_limit.py
skeenode-ai/src/services/: __init__.py  prediction.py
skeenode-ai/tests/: conftest.py  test_api.py  test_config.py  test_pipeline.py  test_schemas.py
skeenode-backend/: .env.example  Dockerfile  go.mod  go.sum
skeenode-backend/cmd/api/: main.go
skeenode-backend/cmd/executor/: main.go
skeenode-backend/cmd/scheduler/: main.go
skeenode-backend/configs/: config.go
skeenode-backend/migrations/: 001_schema.sql  002_indexes.sql
skeenode-backend/pkg/ai/: client.go
skeenode-backend/pkg/api/: handlers_cluster.go  handlers_jobs.go  server.go
skeenode-backend/pkg/auth/: apikey.go  jwt.go
skeenode-backend/pkg/coordination/: interface.go
skeenode-backend/pkg/executor/: core.go
skeenode-backend/pkg/logger/: logger.go
skeenode-backend/pkg/metrics/: metrics.go
skeenode-backend/pkg/models/: job.go
skeenode-backend/pkg/observability/: tracing.go
skeenode-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
skeenode-frontend/src/: App.css  App.tsx  index.css
(+38 files in other folders)
